<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchWordsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clear_button"
            android:layout_gravity="start"
            android:text="@string/clear_text_button"
            app:cornerRadius="15dp"
            android:layout_marginEnd="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/open_button"
            android:layout_gravity="end"
            android:text="@string/open_text_button"
            app:cornerRadius="15dp"
            android:layout_marginEnd="5dp"/>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/editText_search_word"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/enter_text_hint"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_marginVertical="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_search_word"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spinner_level"
         />
    <TextView
        android:id="@+id/label_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/spinner_level"
        app:layout_constraintTop_toTopOf="@id/spinner_level"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/level_label"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/spinner_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="@id/spinner_repeats"
        app:layout_constraintBottom_toTopOf="@id/spinner_repeats"
            />

    <TextView
        android:id="@+id/label_repeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/count_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/spinner_repeats"
        app:layout_constraintTop_toTopOf="@id/spinner_repeats"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/spinner_repeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toRightOf="@+id/label_repeats"
        app:layout_constraintBottom_toTopOf="@+id/apply_button"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:cornerRadius="15dp"
        android:id="@+id/apply_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>