<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordPageFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_word_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save_button"
            app:cornerRadius="15dp"
            android:layout_marginEnd="5dp"
            />

    </androidx.appcompat.widget.Toolbar>

<ScrollView

    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/toolbar_word_page"
    app:layout_constraintBottom_toBottomOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >

        <EditText
            android:id="@+id/originalWord"
            android:hint="@string/word_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#40CCC4C4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:gravity="top"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/transcription"
            android:hint="@string/tr_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#40CCC4C4"
            android:inputType="textMultiLine"
            android:gravity="top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/originalWord" />

        <EditText
            android:id="@+id/translatedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#40CCC4C4"
            android:inputType="text"
            android:gravity="top"
            android:hint="@string/translatedWord"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transcription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="15dp"
            android:layout_marginEnd="5dp"
            android:text="@string/add_button_text"
            android:textAlignment="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/translatedText"
            />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/translationsGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:justifyContent="flex_start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_button">
        </com.google.android.flexbox.FlexboxLayout>

        <EditText
            android:id="@+id/orig_example"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/original_hint"
            android:gravity="top"
            android:background="#40CCC4C4"
            app:layout_constraintTop_toBottomOf="@id/translationsGrid"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/transl_example"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:background="#40CCC4C4"
            android:hint="@string/trexample_hint"
            app:layout_constraintTop_toBottomOf="@id/orig_example"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/picture"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/transl_example"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@android:drawable/ic_menu_search"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/isLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/picture"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/isLearnStatus"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>