<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercisesFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_exercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/list_exercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:choiceMode="singleChoice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_exercises"
        android:entries="@array/exercises_types"
        android:layout_marginTop="10dp"
        android:footerDividersEnabled="true">
    </ListView>

    <TextView
        android:id="@+id/label_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/list_exercises"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/settings_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/view_splitter"
        android:layout_marginTop="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_settings"
        />

    <TextView
        android:id="@+id/label_words_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/spinner_word_types"
        app:layout_constraintBottom_toBottomOf="@id/spinner_word_types"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/words_type_label"
        android:textColor="@color/black"
        android:layout_marginStart="17dp"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner_word_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:textAlignment="gravity"
        android:gravity="right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_splitter"
        android:entries="@array/words_types"/>

    <TextView
        android:id="@+id/label_set_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/spinner_set_type"
        app:layout_constraintBottom_toBottomOf="@id/spinner_set_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/sets_label"
        android:textColor="@color/black"
        android:layout_marginStart="17dp"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner_set_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:textAlignment="gravity"
        android:gravity="right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_word_types"/>

    <TextView
        android:id="@+id/label_count_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/spinner_count_type"
        app:layout_constraintBottom_toBottomOf="@id/spinner_count_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/count_words_label"
        app:layout_constraintRight_toLeftOf="@id/spinner_count_type"
        android:textColor="@color/black"
        android:layout_marginStart="17dp"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/spinner_count_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:textAlignment="gravity"
        android:gravity="right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_set_type"
        android:entries="@array/count_types"/>


</androidx.constraintlayout.widget.ConstraintLayout>